@@ -3,12 +3,12 @@
  import survive.MiddleLayer;
  import survive.Survive;
  
- public class TreeEntity
+ public class LogEntity
    extends MiddleLayer
  {
    private Survive survive;
    
-   public TreeEntity(Survive survive, String ref, int x, int y, String type)
+   public LogEntity(Survive survive, String ref, int x, int y, String type)
    {
      super(ref, x, y, type);
      
@@ -23,7 +23,7 @@
    
    public int getModifiedY()
    {
-     int modifiedY = 40;
+     int modifiedY = 0;
      return modifiedY;
    }
 
@@ -32,9 +32,9 @@
      survive.removeMiddleLayer(this);
      survive.addToInventory(1, 1);
    }
-    public boolean passable()
+   public boolean passable()
    {
-       return false;
+       return true;
    }
  }
 
